# AltBFF

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  conaninstall.bat
AltBFF/: CMakeLists.txt
AltBFF/data/: settings.ini
AltBFF/resources/: elev_sr.csv  pitchrate_sr.csv  settings - msfs.ini  settings - msfs.toml  settings - xplane.ini  settings - xplane.toml  settings.ini  settings.toml
AltBFF/src/: A2ASTec30AP.cpp  A2ASTec30AP.h  AltBFF.cpp  AltBFF.h  ControlLoop.cpp  ControlLoop.h  Main.cpp  Model.cpp  Model.h  PID.h  PeriodicLoop.h  ReadSettings.cpp  ReadSettings.h  Sim.cpp  Sim.h  SimDummy.h  SimFSUIPC.cpp  SimFSUIPC.h  SimImpl.h  SimModelLoop.cpp  SimModelLoop.h  Tests.cpp  cl-compute.md
BFFCLAPI/: CMakeLists.txt
BFFCLAPI/include/BFFCLAPI/: CLStructures.h  UDPClient.h
BFFCLAPI/src/: ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  UDPClient.cpp
CSV/: CMakeLists.txt
CSV/include/CSV/: CSV.hpp
CSV/src/: CSVread.cpp  CSVwrite.cpp  csv.h  libcsv.c  strerror.cpp  strerror.hpp
FSUIPC/: CMakeLists.txt  FSUIPC_User64.h  IPCuser64.c  IPCuser64.h
Utils/: CMakeLists.txt
Utils/include/Utils/: Accumulators.h  Common.h  DispatchQueue.h  IRunner.h  PID.h  PeriodicTimer.h  QueueRunner.h  RateLimiter.h  Timer.h
Utils/src/: DispatchQueue.cpp  IRunner.cpp
promise-cpp/: CMakeLists.txt
